# ClearMOT

./: .gitignore  README.md
groundtruth/: GroundTruth-Wester_LLTV_VELA.xml  Groundtruth-Honk-Kong.xml  Groundtruth-dtv9_clip_3700_7500.xml
src/: CMakeLists.txt  clearMOT.cpp  clearMOT.h  main.cpp  munkres.h  util.h
